# job-news-aggregator

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: README
src/config/: database.py
src/models/: __init__.py  jobpost.py  profile.py  scrapelog.py
src/scrapers/: indeed.py  test_scrapers.py
