[project]
name = "job-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"sqlalchemy",
	"psycopg2-binary",
	"requests",
	"selenium",
	"jinja2",
	"celery",
	"redis",
	"apscheduler",
	"python-dotenv",
	"email-validator"
]

[tool.setuptools.packages.find]
where = ["src"]
